# rusty-pi-os

./: .gitignore
0-blinky/phase3/: blinky.c
0-blinky/phase4/src/: lang_items.rs  lib.rs
1-shell/: .gitignore
1-shell/ferris-wheel/compile-pass/: try.rs
1-shell/ferris-wheel/run-pass/: builder.rs  expressions.rs  trait-impl.rs
1-shell/stack-vec/src/: lib.rs
1-shell/ttywrite/src/: main.rs
1-shell/xmodem/src/: lib.rs
2-fs/fat32/: Cargo.toml  README
2-fs/fat32/src/: lib.rs  mbr.rs  tests.rs  util.rs
2-fs/fat32/src/traits/: dummy.rs  metadata.rs
2-fs/fat32/src/vfat/: cache.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
3-spawn/: .gitignore
os/bootloader/src/: kmain.rs
os/kernel/: Cargo.toml  Makefile  build.rs
os/kernel/ext/: init.S
os/kernel/src/: console.rs  kmain.rs  lang_items.rs  mutex.rs  shell.rs
os/kernel/src/allocator/: bin.rs  bump.rs  mod.rs  util.rs
os/kernel/src/fs/: mod.rs  sd.rs
os/kernel/src/process/: process.rs  scheduler.rs  stack.rs
os/kernel/src/traps/: irq.rs  mod.rs  syndrome.rs  trap_frame.rs
os/pi/src/: gpio.rs  interrupt.rs  lib.rs  timer.rs  uart.rs
os/pi/src/atags/: atag.rs  mod.rs  raw.rs
os/std/: Cargo.toml
os/std/src/: alloc.rs  lib.rs
os/std/src/io/: mod.rs
os/std/src/prelude/: v1.rs
os/std/src/sys_common/: util.rs
