[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
std = { path = "../std"}
pi = { path = "../pi", features=["std"] }
stack-vec = { path = "../../1-shell/stack-vec/" }
fat32 = { path = "../../2-fs/fat32/" }

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
